Port the twain wrapper to Qt5 and KF5

The twain wrapper seems to work on par with the Qt4/KDE4 version.
Both versions work with a twain test scanner, but fail with my
Canon MX455.

We still have to check translation.

BUG: 387268